# bobnet

./: .gitignore  CMakeLists.txt  README.md  bobnet.cpp  bobnet.h  connection.cpp  main.cpp  response.cpp  response.h
examples/: CMakeLists.txt  binance.cpp  rest.cpp  reuse_connection.cpp  simpleget.cpp
include/bobnet/: bobnet.h  connection.h  exception.h  options.h  response.h
src/: CMakeLists.txt  bobnet.cpp  connection.cpp  exception.cpp  options.cpp  response.cpp
tests/: CMakeLists.txt  connection_test.cpp  headers_test.cpp  request_test.cpp
